# TRACT

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  tract_experimental_narrative.ipynb
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
data/: canary_items_for_labeling.json
data/processed/: cre_hierarchy.json  hub_descriptions.json  hub_descriptions_reviewed.json  hub_descriptions_reviewed.pre_regen.json
data/raw/: PROVENANCE.txt
data/training/: ai_link_audit.csv  audit_corrections_log.json  hub_links.jsonl  hub_links_by_framework.json  hub_links_by_framework_curated.json  hub_links_curated.jsonl
docs/: architecture.md  cli-reference.md  framework-guide.md  glossary.md  hub-description-review-guide.md  phase0-results.md  session-prompts.md
examples/: README.md  sample_framework.csv  sample_framework.md
notebooks/: nb_helpers.py  tract_experimental_narrative.ipynb
opencre_export/: CSA_AI_Controls_Matrix.csv  EU_AI_Act.csv  MITRE_ATLAS.csv  NIST_AI_600-1.csv  OWASP_Agentic_AI_Top_10.csv  coverage_gaps.json  export_manifest.json
parsers/: __init__.py  extract_hub_links.py  fetch_opencre.py  merge_all_controls.py  parse_aiuc_1.py  parse_cosai.py  parse_csa_aicm.py  parse_eu_ai_act.py  parse_eu_gpai_cop.py  parse_mitre_atlas.py  parse_nist_ai_600_1.py  parse_nist_ai_rmf.py  parse_owasp_agentic_top10.py  parse_owasp_ai_exchange.py  parse_owasp_dsgai.py  parse_owasp_llm_top10.py  validate_all.py
scripts/: direct_opencre_import.py  opencre_import.sh  precompute_base_embeddings.py  verify_opencre_import.py
tests/: test_accept.py  test_active_learning_canary.py  test_active_learning_deploy.py  test_active_learning_model_io.py  test_active_learning_review.py  test_active_learning_stopping.py  test_active_learning_train_deploy.py  test_active_learning_unmapped.py  test_assign_e2e.py  test_base_parser.py  test_bridge_classify.py  test_bridge_cli.py  test_bridge_describe.py  test_bridge_integration.py  test_bridge_review.py  test_bridge_similarity.py  test_calibrate.py  test_calibration_conformal.py  test_calibration_diagnostics.py  test_calibration_ood.py  test_calibration_temperature.py  test_canonical_cli.py  test_canonical_export.py  test_canonical_schema.py  test_cli.py  test_compare.py  test_crosswalk_export.py  test_crosswalk_populate.py  test_crosswalk_schema.py  test_crosswalk_snapshot.py  test_crosswalk_store.py  test_csv_extractor.py  test_data_quality.py  test_dataset_bundle.py  test_dataset_card.py  test_dataset_publish.py  test_descriptions.py  test_evaluate.py  test_export_filters.py  test_export_gaps.py  (+61 more)
tract/: __init__.py  accept.py  cli.py  compare.py  config.py  descriptions.py  hierarchy.py  inference.py  io.py  sanitize.py  schema.py  validate.py
(+182 files in other folders)
