[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tract"
version = "0.1.0"
description = "Transitive Reconciliation and Assignment of CRE Taxonomies"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "requests>=2.31",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.20.0",
    "pdfplumber>=0.10.0",
]
dev = [
    "pytest>=8.0",
    "mypy>=1.10",
    "types-PyYAML",
    "types-beautifulsoup4",
    "types-requests",
]
phase0 = [
    "torch>=2.2,<3",
    "transformers>=4.40,<5",
    "sentence-transformers>=3.0,<4",
    "anthropic>=0.25,<1",
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "scikit-learn>=1.4,<2",
    "datasets>=2.18,<4",
    "einops>=0.7,<1",
]

[project.scripts]
tract = "tract.cli:main"

[tool.setuptools.packages.find]
include = ["tract*"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-k not slow')",
    "integration: marks tests requiring real deployment model and artifacts (deselect with '-m not integration')",
]
